@@ -1,19 +1,24 @@
 package com.epicode.Spring.security.service;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.UrlResource;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.util.StringUtils;
 
 import com.epicode.Spring.security.entity.Image;
 import com.epicode.Spring.security.entity.Movie;
 import com.epicode.Spring.security.payload.MovieDto;
+import com.epicode.Spring.security.payload.MovieResponse;
 import com.epicode.Spring.security.repository.MovieRepository;
 
 import jakarta.persistence.EntityExistsException;
@@ -28,10 +33,11 @@ public class MovieService {
 			throw new EntityExistsException("This movie already exists.");
 		
 		try {
-			String path = System.getProperty("user.home") + "/Desktop/Programming";
-			String coverImageName = UUID.randomUUID().toString() + "_" + movieDto.getCover().getOriginalFilename();
+			String fileName=StringUtils.cleanPath(movieDto.getCover().getOriginalFilename());
+			String path = System.getProperty("user.home") + "/Desktop/Movie covers";
+			String coverImageName = UUID.randomUUID().toString() + "_" + fileName;
 			Path coverImagePath = Path.of(path, coverImageName);
-			Files.createDirectories(coverImagePath.getParent());
+			if (!Files.exists(coverImagePath.getParent())) Files.createDirectories(coverImagePath.getParent());
 			Files.copy(movieDto.getCover().getInputStream(), coverImagePath, StandardCopyOption.REPLACE_EXISTING);
 			
 			Image cover = new Image();
@@ -50,28 +56,42 @@ public class MovieService {
 	        movie.setGenres(movieDto.getGenres());
 	        movie.setIsTridimensional(movieDto.getIsTridimensional());
 			
-	        Movie mRes=movieRepo.save(movie);
-			movieDto.setId(mRes.getId());
+	        movieRepo.save(movie);
 			return movieDto;
 		} catch (IOException e) {
-            throw new RuntimeException("Failed to upload cover image.");
+            throw new DataIntegrityViolationException("Failed to upload cover image.");
         }
 	}
 	
-//	public MovieDto get(long id) {
-//		if(!movieRepo.existsById(id)) throw new EntityNotFoundException("Couldn't find this movie.");
-//		Movie movie=movieRepo.findById(id).get();
-//		
-//		try {
-//			Path imagePath = Path.of(System.getProperty("user.home") + "/Desktop/Programming", movie.getCover().getPath());
-//	        byte[] b=Files.readAllBytes(imagePath);
-//	        MultipartFile m=new ByteArrayM
-//	        
-//	        return new MovieDto(movie.getId(), movie.getTitle(), null, null, null, null, null, null, null, null, null);
-//		} catch(IOException e) {
-//			throw new RuntimeException("Failed to read cover image.");
-//		}
-//	}
+	public MovieResponse get(long id) {
+		if(!movieRepo.existsById(id)) throw new EntityNotFoundException("Couldn't find this movie.");
+		Movie movie=movieRepo.findById(id).get();
+
+		Path path=Paths.get(movie.getCover().getPath());
+		
+		try {
+			Resource resource = new UrlResource(path.toUri());
+			if(resource.exists() && resource.isReadable())
+				throw new EntityNotFoundException("Couldn't retrieve the movie cover.");
+			
+			return new MovieResponse(
+					movie.getId(),
+					movie.getTitle(),
+					resource,
+					movie.getTrailerLink(),
+					movie.getReleaseDate(),
+					movie.getDuration(),
+					movie.getDirector(),
+					movie.getActors(),
+					movie.getDescription(),
+					movie.getGenres(),
+					movie.getIsTridimensional()
+					);
+			
+		} catch (MalformedURLException e) {
+			throw new EntityNotFoundException("Couldn't retrieve the movie cover.");
+		}
+	}
 	
 	public Movie edit(long id, Movie m) {
 		if(!movieRepo.existsById(id) || id!=m.getId()) throw new EntityNotFoundException("Couldn't find this movie.");
